examples/c/error-codes/violates-constraint/fatal/CV-TDG10-bad-static.output
CV-TDG10-bad-static.c:5:5: error: conflicting types for 'f'
int f(int);
    ^
CV-TDG10-bad-static.c:3:5: note: previous declaration is here
int f(void);
    ^
1 error generated.
Error while processing /home/jtusil/projects/rv-match/rv-match/c-semantics/examples/c/error-codes/violates-constraint/fatal/.tmp-kcc-Nga3p/pp-s1pLr.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
